[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/models/levels/env/rooms/Deadend0.material" type="Material" id=1]
[ext_resource path="res://code/gameplay/rooms/deadend0.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=1]
resource_name = "deadend0_Plane"
surfaces/0 = {
"aabb": AABB( -25, 0, -25, 50, 20, 50 ),
"array_data": PoolByteArray( 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 200, 65, 0, 127, 127, 126, 180, 55, 212, 58, 0, 0, 112, 65, 0, 0, 152, 65, 0, 0, 112, 65, 0, 129, 129, 126, 153, 46, 28, 57, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 112, 65, 0, 129, 127, 127, 153, 46, 116, 57, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 112, 193, 0, 129, 129, 126, 199, 53, 116, 57, 0, 0, 112, 65, 0, 0, 152, 65, 0, 0, 160, 65, 0, 129, 129, 126, 178, 43, 28, 57, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 160, 65, 0, 129, 129, 126, 178, 43, 116, 57, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 200, 193, 0, 127, 127, 127, 74, 59, 44, 59, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 200, 193, 0, 127, 127, 127, 74, 59, 212, 58, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 160, 193, 0, 129, 127, 127, 119, 54, 116, 57, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 32, 65, 0, 129, 127, 127, 173, 48, 116, 57, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 129, 126, 226, 56, 220, 59, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 129, 127, 66, 58, 220, 59, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 65, 0, 127, 127, 126, 50, 56, 212, 58, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 112, 65, 0, 127, 127, 127, 138, 56, 212, 58, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 127, 127, 226, 56, 212, 58, 0, 0, 200, 65, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 127, 127, 23, 53, 108, 56, 0, 0, 200, 65, 0, 0, 152, 65, 0, 0, 32, 65, 0, 129, 127, 126, 173, 48, 108, 56, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 127, 127, 66, 58, 212, 58, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 112, 193, 0, 127, 127, 127, 154, 58, 212, 58, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 193, 0, 127, 127, 127, 242, 58, 212, 58, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 160, 65, 0, 127, 127, 126, 50, 56, 44, 59, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 112, 65, 0, 127, 127, 126, 138, 56, 44, 59, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 127, 127, 226, 56, 44, 59, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 200, 193, 0, 129, 127, 127, 39, 55, 116, 57, 0, 0, 112, 65, 0, 0, 152, 65, 0, 0, 200, 193, 0, 129, 127, 127, 39, 55, 28, 57, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 127, 127, 66, 58, 44, 59, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 112, 193, 0, 127, 127, 127, 154, 58, 44, 59, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 160, 193, 0, 127, 127, 127, 242, 58, 44, 59, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 126, 23, 53, 116, 57, 0, 0, 160, 65, 0, 0, 0, 0, 0, 0, 112, 65, 0, 127, 127, 126, 138, 56, 132, 59, 0, 0, 160, 65, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 129, 127, 226, 56, 132, 59, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 200, 65, 0, 129, 127, 127, 98, 36, 116, 57, 0, 0, 160, 65, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 127, 127, 66, 58, 132, 59, 0, 0, 160, 65, 0, 0, 0, 0, 0, 0, 112, 193, 0, 127, 127, 127, 154, 58, 132, 59, 0, 0, 112, 65, 0, 0, 152, 65, 0, 0, 32, 65, 0, 129, 127, 127, 173, 48, 28, 57, 0, 0, 112, 65, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 127, 127, 23, 53, 28, 57, 0, 0, 112, 65, 0, 0, 152, 65, 0, 0, 112, 193, 0, 129, 129, 126, 199, 53, 28, 57, 0, 0, 112, 65, 0, 0, 152, 65, 0, 0, 160, 193, 0, 129, 127, 127, 119, 54, 28, 57, 0, 0, 160, 65, 0, 0, 152, 65, 0, 0, 112, 65, 0, 129, 129, 126, 153, 46, 196, 56, 0, 0, 160, 65, 0, 0, 152, 65, 0, 0, 32, 65, 0, 129, 127, 127, 173, 48, 196, 56, 0, 0, 160, 65, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 127, 127, 23, 53, 196, 56, 0, 0, 160, 65, 0, 0, 152, 65, 0, 0, 112, 193, 0, 129, 127, 127, 199, 53, 196, 56, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 200, 65, 129, 0, 0, 1, 13, 50, 98, 36, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 200, 65, 127, 127, 130, 63, 96, 57, 14, 56, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 200, 65, 127, 127, 129, 63, 236, 57, 14, 56, 0, 0, 112, 65, 0, 0, 160, 65, 0, 0, 160, 65, 129, 63, 0, 1, 98, 36, 153, 46, 0, 0, 112, 65, 0, 0, 160, 65, 0, 0, 160, 65, 127, 127, 0, 1, 98, 36, 153, 46, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 160, 65, 129, 0, 0, 1, 98, 36, 178, 43, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 160, 65, 127, 127, 0, 1, 98, 36, 178, 43, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 200, 193, 129, 0, 0, 1, 208, 56, 245, 50, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 200, 193, 0, 0, 0, 1, 208, 56, 245, 50, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 32, 65, 129, 0, 0, 1, 13, 50, 49, 51, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 32, 65, 129, 63, 0, 1, 13, 50, 49, 51, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 32, 193, 129, 0, 0, 1, 13, 50, 89, 54, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 32, 193, 193, 0, 0, 1, 13, 50, 89, 54, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 65, 129, 0, 0, 1, 13, 50, 178, 43, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 65, 127, 127, 0, 1, 13, 50, 178, 43, 0, 0, 200, 65, 0, 0, 160, 65, 0, 0, 32, 193, 129, 0, 0, 1, 98, 36, 89, 54, 0, 0, 200, 65, 0, 0, 160, 65, 0, 0, 32, 193, 193, 0, 0, 1, 98, 36, 89, 54, 0, 0, 200, 65, 0, 0, 160, 65, 0, 0, 32, 65, 129, 0, 0, 1, 98, 36, 49, 51, 0, 0, 200, 65, 0, 0, 160, 65, 0, 0, 32, 65, 129, 63, 0, 1, 98, 36, 49, 51, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 160, 65, 129, 63, 0, 1, 13, 50, 153, 46, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 160, 65, 127, 127, 0, 1, 13, 50, 153, 46, 0, 0, 112, 65, 0, 0, 160, 65, 0, 0, 200, 193, 129, 0, 0, 1, 224, 54, 245, 50, 0, 0, 112, 65, 0, 0, 160, 65, 0, 0, 200, 193, 0, 0, 0, 1, 224, 54, 245, 50, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 160, 193, 129, 0, 0, 1, 208, 56, 148, 49, 0, 0, 112, 65, 0, 0, 0, 0, 0, 0, 160, 193, 193, 0, 0, 1, 13, 50, 37, 56, 0, 0, 160, 64, 0, 0, 160, 65, 0, 0, 200, 65, 127, 127, 130, 63, 236, 57, 123, 51, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 200, 65, 129, 0, 0, 1, 98, 36, 98, 36, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 200, 65, 127, 127, 130, 63, 96, 57, 123, 51, 0, 0, 112, 65, 0, 0, 160, 65, 0, 0, 160, 193, 129, 0, 0, 1, 224, 54, 148, 49, 0, 0, 112, 65, 0, 0, 160, 65, 0, 0, 160, 193, 193, 0, 0, 1, 98, 36, 37, 56, 0, 0, 160, 64, 0, 0, 32, 65, 0, 0, 200, 65, 127, 127, 130, 63, 236, 57, 237, 53, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 200, 65, 0, 127, 127, 126, 180, 55, 116, 57, 0, 0, 112, 193, 0, 0, 152, 65, 0, 0, 112, 65, 0, 129, 129, 126, 153, 46, 44, 59, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 112, 65, 0, 129, 127, 127, 153, 46, 212, 58, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 112, 193, 0, 129, 127, 127, 199, 53, 212, 58, 0, 0, 112, 193, 0, 0, 152, 65, 0, 0, 160, 65, 0, 129, 129, 126, 178, 43, 44, 59, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 160, 65, 0, 129, 129, 126, 178, 43, 212, 58, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 200, 193, 0, 127, 127, 127, 74, 59, 28, 57, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 200, 193, 0, 127, 127, 127, 74, 59, 116, 57, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 160, 193, 0, 129, 127, 127, 119, 54, 212, 58, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 32, 65, 0, 129, 129, 127, 173, 48, 212, 58, 0, 0, 200, 193, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 127, 127, 226, 56, 108, 56, 0, 0, 200, 193, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 127, 126, 66, 58, 108, 56, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 160, 65, 0, 127, 127, 126, 50, 56, 116, 57, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 112, 65, 0, 127, 127, 127, 138, 56, 116, 57, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 127, 126, 226, 56, 116, 57, 0, 0, 200, 193, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 126, 23, 53, 220, 59, 0, 0, 200, 193, 0, 0, 152, 65, 0, 0, 32, 65, 0, 129, 129, 126, 173, 48, 220, 59, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 127, 126, 66, 58, 116, 57, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 112, 193, 0, 127, 127, 126, 154, 58, 116, 57, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 160, 193, 0, 127, 127, 126, 242, 58, 116, 57, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 160, 65, 0, 127, 127, 126, 50, 56, 28, 57, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 112, 65, 0, 127, 127, 126, 138, 56, 28, 57, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 127, 126, 226, 56, 28, 57, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 200, 193, 0, 129, 127, 127, 39, 55, 212, 58, 0, 0, 112, 193, 0, 0, 152, 65, 0, 0, 200, 193, 0, 129, 127, 127, 39, 55, 44, 59, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 127, 126, 66, 58, 28, 57, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 112, 193, 0, 127, 127, 127, 154, 58, 28, 57, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 160, 193, 0, 127, 127, 126, 242, 58, 28, 57, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 127, 23, 53, 212, 58, 0, 0, 160, 193, 0, 0, 0, 0, 0, 0, 112, 65, 0, 127, 127, 126, 138, 56, 196, 56, 0, 0, 160, 193, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 127, 126, 226, 56, 196, 56, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 200, 65, 0, 129, 127, 127, 98, 36, 212, 58, 0, 0, 160, 193, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 127, 126, 66, 58, 196, 56, 0, 0, 160, 193, 0, 0, 0, 0, 0, 0, 112, 193, 0, 127, 127, 127, 154, 58, 196, 56, 0, 0, 112, 193, 0, 0, 152, 65, 0, 0, 32, 65, 0, 129, 129, 126, 173, 48, 44, 59, 0, 0, 112, 193, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 126, 23, 53, 44, 59, 0, 0, 112, 193, 0, 0, 152, 65, 0, 0, 112, 193, 0, 129, 127, 127, 199, 53, 44, 59, 0, 0, 112, 193, 0, 0, 152, 65, 0, 0, 160, 193, 0, 129, 127, 127, 119, 54, 44, 59, 0, 0, 160, 193, 0, 0, 152, 65, 0, 0, 112, 65, 0, 129, 129, 126, 153, 46, 132, 59, 0, 0, 160, 193, 0, 0, 152, 65, 0, 0, 32, 65, 0, 129, 129, 126, 173, 48, 132, 59, 0, 0, 160, 193, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 126, 23, 53, 132, 59, 0, 0, 160, 193, 0, 0, 152, 65, 0, 0, 112, 193, 0, 129, 127, 127, 199, 53, 132, 59, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 200, 65, 127, 127, 129, 63, 144, 59, 14, 56, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 200, 65, 127, 0, 0, 126, 38, 51, 98, 36, 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 200, 65, 127, 127, 129, 63, 4, 59, 14, 56, 0, 0, 112, 193, 0, 0, 160, 65, 0, 0, 160, 65, 127, 127, 0, 126, 83, 54, 153, 46, 0, 0, 112, 193, 0, 0, 160, 65, 0, 0, 160, 65, 127, 63, 0, 126, 83, 54, 153, 46, 0, 0, 32, 193, 0, 0, 160, 65, 0, 0, 160, 65, 127, 127, 0, 126, 83, 54, 178, 43, 0, 0, 32, 193, 0, 0, 160, 65, 0, 0, 160, 65, 127, 0, 0, 127, 83, 54, 178, 43, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 200, 193, 0, 0, 0, 1, 208, 56, 155, 55, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 200, 193, 127, 0, 0, 1, 208, 56, 155, 55, 0, 0, 200, 193, 0, 0, 0, 0, 0, 0, 32, 65, 127, 63, 0, 126, 38, 51, 49, 51, 0, 0, 200, 193, 0, 0, 0, 0, 0, 0, 32, 65, 127, 0, 0, 126, 38, 51, 49, 51, 0, 0, 200, 193, 0, 0, 0, 0, 0, 0, 32, 193, 63, 0, 0, 127, 38, 51, 89, 54, 0, 0, 200, 193, 0, 0, 0, 0, 0, 0, 32, 193, 127, 0, 0, 127, 38, 51, 89, 54, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 160, 65, 127, 127, 0, 126, 38, 51, 178, 43, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 160, 65, 127, 0, 0, 126, 38, 51, 178, 43, 0, 0, 200, 193, 0, 0, 160, 65, 0, 0, 32, 193, 63, 0, 0, 127, 83, 54, 89, 54, 0, 0, 200, 193, 0, 0, 160, 65, 0, 0, 32, 193, 127, 0, 0, 126, 83, 54, 89, 54, 0, 0, 200, 193, 0, 0, 160, 65, 0, 0, 32, 65, 127, 63, 0, 126, 83, 54, 49, 51, 0, 0, 200, 193, 0, 0, 160, 65, 0, 0, 32, 65, 127, 0, 0, 126, 83, 54, 49, 51, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 160, 65, 127, 127, 0, 126, 38, 51, 153, 46, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 160, 65, 127, 63, 0, 126, 38, 51, 153, 46, 0, 0, 112, 193, 0, 0, 160, 65, 0, 0, 200, 193, 0, 0, 0, 1, 224, 54, 155, 55, 0, 0, 112, 193, 0, 0, 160, 65, 0, 0, 200, 193, 127, 0, 0, 1, 224, 54, 155, 55, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 160, 193, 63, 0, 0, 127, 38, 51, 37, 56, 0, 0, 112, 193, 0, 0, 0, 0, 0, 0, 160, 193, 127, 0, 0, 1, 208, 56, 37, 56, 0, 0, 160, 192, 0, 0, 160, 65, 0, 0, 200, 65, 127, 127, 130, 63, 4, 59, 123, 51, 0, 0, 32, 193, 0, 0, 160, 65, 0, 0, 200, 65, 127, 127, 130, 63, 144, 59, 123, 51, 0, 0, 32, 193, 0, 0, 160, 65, 0, 0, 200, 65, 127, 0, 0, 127, 83, 54, 98, 36, 0, 0, 112, 193, 0, 0, 160, 65, 0, 0, 160, 193, 63, 0, 0, 127, 83, 54, 37, 56, 0, 0, 112, 193, 0, 0, 160, 65, 0, 0, 160, 193, 127, 0, 0, 1, 224, 54, 37, 56, 0, 0, 160, 192, 0, 0, 32, 65, 0, 0, 200, 65, 127, 127, 130, 63, 4, 59, 237, 53 ),
"array_index_data": PoolByteArray( 19, 0, 6, 0, 27, 0, 19, 0, 7, 0, 6, 0, 20, 0, 21, 0, 29, 0, 21, 0, 30, 0, 29, 0, 21, 0, 22, 0, 30, 0, 8, 0, 96, 0, 81, 0, 8, 0, 23, 0, 96, 0, 22, 0, 32, 0, 30, 0, 22, 0, 25, 0, 32, 0, 28, 0, 36, 0, 3, 0, 28, 0, 35, 0, 36, 0, 25, 0, 33, 0, 32, 0, 25, 0, 26, 0, 33, 0, 26, 0, 27, 0, 33, 0, 12, 0, 21, 0, 20, 0, 12, 0, 13, 0, 21, 0, 13, 0, 22, 0, 21, 0, 13, 0, 14, 0, 22, 0, 3, 0, 37, 0, 8, 0, 3, 0, 36, 0, 37, 0, 9, 0, 35, 0, 28, 0, 9, 0, 34, 0, 35, 0, 14, 0, 25, 0, 22, 0, 14, 0, 17, 0, 25, 0, 5, 0, 1, 0, 2, 0, 5, 0, 4, 0, 1, 0, 17, 0, 26, 0, 25, 0, 17, 0, 18, 0, 26, 0, 18, 0, 27, 0, 26, 0, 18, 0, 19, 0, 27, 0, 2, 0, 34, 0, 9, 0, 2, 0, 1, 0, 34, 0, 36, 0, 41, 0, 37, 0, 34, 0, 40, 0, 35, 0, 34, 0, 39, 0, 40, 0, 7, 0, 92, 0, 80, 0, 7, 0, 19, 0, 92, 0, 35, 0, 41, 0, 36, 0, 35, 0, 40, 0, 41, 0, 1, 0, 39, 0, 34, 0, 1, 0, 38, 0, 39, 0, 8, 0, 24, 0, 23, 0, 8, 0, 37, 0, 24, 0, 29, 0, 30, 0, 10, 0, 4, 0, 38, 0, 1, 0, 30, 0, 11, 0, 10, 0, 30, 0, 32, 0, 11, 0, 32, 0, 33, 0, 11, 0, 38, 0, 16, 0, 39, 0, 39, 0, 15, 0, 40, 0, 39, 0, 16, 0, 15, 0, 40, 0, 15, 0, 41, 0, 136, 0, 50, 0, 122, 0, 136, 0, 64, 0, 50, 0, 120, 0, 134, 0, 128, 0, 120, 0, 118, 0, 134, 0, 72, 0, 69, 0, 67, 0, 72, 0, 43, 0, 69, 0, 42, 0, 47, 0, 68, 0, 42, 0, 55, 0, 47, 0, 48, 0, 62, 0, 46, 0, 48, 0, 56, 0, 62, 0, 65, 0, 63, 0, 70, 0, 65, 0, 49, 0, 63, 0, 45, 0, 52, 0, 60, 0, 45, 0, 61, 0, 52, 0, 71, 0, 54, 0, 66, 0, 71, 0, 58, 0, 54, 0, 51, 0, 57, 0, 59, 0, 51, 0, 53, 0, 57, 0, 28, 0, 82, 0, 9, 0, 28, 0, 101, 0, 82, 0, 12, 0, 73, 0, 85, 0, 12, 0, 0, 0, 73, 0, 92, 0, 79, 0, 80, 0, 92, 0, 100, 0, 79, 0, 9, 0, 75, 0, 2, 0, 9, 0, 82, 0, 75, 0, 3, 0, 101, 0, 28, 0, 3, 0, 76, 0, 101, 0, 93, 0, 102, 0, 94, 0, 94, 0, 103, 0, 95, 0, 94, 0, 102, 0, 103, 0, 2, 0, 78, 0, 5, 0, 2, 0, 75, 0, 78, 0, 95, 0, 105, 0, 98, 0, 95, 0, 103, 0, 105, 0, 101, 0, 109, 0, 108, 0, 101, 0, 76, 0, 109, 0, 98, 0, 106, 0, 99, 0, 98, 0, 105, 0, 106, 0, 99, 0, 106, 0, 100, 0, 85, 0, 94, 0, 86, 0, 85, 0, 93, 0, 94, 0, 86, 0, 95, 0, 87, 0, 86, 0, 94, 0, 95, 0, 76, 0, 110, 0, 109, 0, 76, 0, 81, 0, 110, 0, 82, 0, 108, 0, 107, 0, 82, 0, 101, 0, 108, 0, 87, 0, 98, 0, 90, 0, 87, 0, 95, 0, 98, 0, 78, 0, 74, 0, 77, 0, 78, 0, 75, 0, 74, 0, 90, 0, 99, 0, 91, 0, 90, 0, 98, 0, 99, 0, 91, 0, 100, 0, 92, 0, 91, 0, 99, 0, 100, 0, 13, 0, 85, 0, 86, 0, 13, 0, 12, 0, 85, 0, 14, 0, 86, 0, 87, 0, 14, 0, 13, 0, 86, 0, 17, 0, 87, 0, 90, 0, 17, 0, 14, 0, 87, 0, 75, 0, 107, 0, 74, 0, 75, 0, 82, 0, 107, 0, 109, 0, 110, 0, 114, 0, 18, 0, 90, 0, 91, 0, 18, 0, 17, 0, 90, 0, 107, 0, 113, 0, 112, 0, 107, 0, 108, 0, 113, 0, 19, 0, 91, 0, 92, 0, 19, 0, 18, 0, 91, 0, 108, 0, 114, 0, 113, 0, 108, 0, 109, 0, 114, 0, 74, 0, 112, 0, 111, 0, 74, 0, 107, 0, 112, 0, 81, 0, 97, 0, 110, 0, 81, 0, 96, 0, 97, 0, 102, 0, 83, 0, 103, 0, 77, 0, 74, 0, 111, 0, 8, 0, 76, 0, 3, 0, 8, 0, 81, 0, 76, 0, 103, 0, 84, 0, 105, 0, 103, 0, 83, 0, 84, 0, 105, 0, 84, 0, 106, 0, 5, 0, 104, 0, 31, 0, 5, 0, 78, 0, 104, 0, 111, 0, 112, 0, 89, 0, 112, 0, 88, 0, 89, 0, 112, 0, 113, 0, 88, 0, 113, 0, 114, 0, 88, 0, 117, 0, 145, 0, 115, 0, 115, 0, 140, 0, 141, 0, 115, 0, 145, 0, 140, 0, 116, 0, 121, 0, 129, 0, 116, 0, 142, 0, 121, 0, 139, 0, 137, 0, 123, 0, 139, 0, 144, 0, 137, 0, 119, 0, 124, 0, 135, 0, 119, 0, 132, 0, 124, 0, 143, 0, 126, 0, 130, 0, 143, 0, 138, 0, 126, 0, 44, 0, 43, 0, 72, 0, 125, 0, 131, 0, 127, 0, 125, 0, 133, 0, 131, 0, 72, 0, 140, 0, 145, 0, 72, 0, 67, 0, 140, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 474,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 146
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 10, 0, -20, 15, 0, -25, 15, 0, -20, 10, 0, -20, 10, 0, -25, 15, 0, -25, 15, 0, 20, 15, 0, 15, 20, 0, 15, 15, 0, 15, 20, 0, 10, 20, 0, 15, 15, 0, 15, 15, 0, 10, 20, 0, 10, 10, 19, -20, -10, 19, -25, -10, 19, -20, 10, 19, -20, 10, 19, -25, -10, 19, -25, 15, 0, 10, 20, 0, -10, 20, 0, 10, 15, 0, 10, 15, 0, -10, 20, 0, -10, 10, 19, -10, 15, 19, -15, 10, 19, -15, 10, 19, -10, 15, 19, -10, 15, 19, -15, 15, 0, -10, 20, 0, -15, 20, 0, -10, 15, 0, -10, 15, 0, -15, 20, 0, -15, 15, 0, -15, 15, 0, -20, 20, 0, -15, 10, 0, 20, 15, 0, 15, 15, 0, 20, 10, 0, 20, 10, 0, 15, 15, 0, 15, 10, 0, 15, 15, 0, 10, 15, 0, 15, 10, 0, 15, 10, 0, 10, 15, 0, 10, 10, 19, -15, 15, 19, -20, 10, 19, -20, 10, 19, -15, 15, 19, -15, 15, 19, -20, 10, 19, 10, 15, 19, -10, 10, 19, -10, 10, 19, 10, 15, 19, 10, 15, 19, -10, 10, 0, 10, 15, 0, -10, 15, 0, 10, 10, 0, 10, 10, 0, -10, 15, 0, -10, 10, 19, 20, 15, 19, 15, 10, 19, 15, 10, 19, 20, 15, 19, 20, 15, 19, 15, 10, 0, -10, 15, 0, -15, 15, 0, -10, 10, 0, -10, 10, 0, -15, 15, 0, -15, 10, 0, -15, 15, 0, -20, 15, 0, -15, 10, 0, -15, 10, 0, -20, 15, 0, -20, 10, 19, 15, 15, 19, 10, 10, 19, 10, 10, 19, 15, 15, 19, 15, 15, 19, 10, 15, 19, -15, 20, 19, -15, 15, 19, -20, 15, 19, 10, 20, 19, -10, 15, 19, -10, 15, 19, 10, 20, 19, 10, 20, 19, -10, 10, 0, -25, -10, 0, -20, -10, 0, -25, 10, 0, -25, 10, 0, -20, -10, 0, -20, 15, 19, -10, 20, 19, -15, 15, 19, -15, 15, 19, -10, 20, 19, -10, 20, 19, -15, 15, 19, 15, 20, 19, 10, 15, 19, 10, 15, 19, 15, 20, 19, 15, 20, 19, 10, 10, 19, -20, 15, 19, -25, 10, 19, -25, 10, 19, -20, 15, 19, -20, 15, 19, -25, 20, 0, 15, 20, 0, 10, 25, 0, 10, 15, 19, 20, 20, 19, 15, 15, 19, 15, 20, 0, 10, 25, 0, -10, 25, 0, 10, 20, 0, 10, 20, 0, -10, 25, 0, -10, 20, 0, -10, 20, 0, -15, 25, 0, -10, 20, 19, 15, 25, 19, 10, 20, 19, 10, 20, 19, 10, 25, 19, -10, 20, 19, -10, 20, 19, 10, 25, 19, 10, 25, 19, -10, 20, 19, -10, 25, 19, -10, 20, 19, -15, -15, 20, -25, 15, 0, -25, -15, 0, -25, -15, 20, -25, 15, 20, -25, 15, 0, -25, -10, 20, 20, -15, 0, 20, -10, 0, 20, -10, 20, 20, -15, 20, 20, -15, 0, 20, 5, 10, 25, 10, 20, 25, 5, 20, 25, 5, 10, 25, 10, 0, 25, 10, 20, 25, 10, 0, 25, 10, 20, 20, 10, 20, 25, 10, 0, 25, 10, 0, 20, 10, 20, 20, 10, 20, 20, 15, 0, 20, 15, 20, 20, 10, 20, 20, 10, 0, 20, 15, 0, 20, 15, 0, -20, 15, 20, -25, 15, 20, -20, 15, 0, -20, 15, 0, -25, 15, 20, -25, 15, 20, 20, 25, 0, 10, 25, 20, 10, 15, 20, 20, 15, 0, 20, 25, 0, 10, 15, 20, -20, 25, 0, -10, 15, 0, -20, 15, 20, -20, 25, 20, -10, 25, 0, -10, 25, 0, 10, 25, 20, -10, 25, 20, 10, 25, 0, 10, 25, 0, -10, 25, 20, -10, 10, 19, -10, -10, 19, 10, 10, 19, 10, 10, 19, -10, -10, 19, -10, -10, 19, 10, 10, 0, 20, -10, 0, 25, -10, 0, 20, 10, 0, 20, 10, 0, 25, -10, 0, 25, -10, 0, -20, -15, 0, -25, -10, 0, -25, -10, 0, -20, -15, 0, -20, -15, 0, -25, 10, 19, 10, -10, 19, 15, 10, 19, 15, 10, 19, 10, -10, 19, 10, -10, 19, 15, 10, 19, -15, -10, 19, -10, 10, 19, -10, 10, 19, -15, -10, 19, -15, -10, 19, -10, -15, 0, 20, -20, 0, 15, -15, 0, 15, -15, 0, 15, -20, 0, 10, -15, 0, 10, -15, 0, 15, -20, 0, 15, -20, 0, 10, 10, 19, 15, -10, 19, 20, 10, 19, 20, 10, 19, 15, -10, 19, 15, -10, 19, 20, -15, 0, 10, -20, 0, -10, -15, 0, -10, -15, 0, 10, -20, 0, 10, -20, 0, -10, -10, 19, -10, -15, 19, -15, -15, 19, -10, -10, 19, -10, -10, 19, -15, -15, 19, -15, -15, 0, -10, -20, 0, -15, -15, 0, -15, -15, 0, -10, -20, 0, -10, -20, 0, -15, -15, 0, -15, -20, 0, -15, -15, 0, -20, -10, 0, 20, -15, 0, 15, -10, 0, 15, -10, 0, 20, -15, 0, 20, -15, 0, 15, -10, 0, 15, -15, 0, 10, -10, 0, 10, -10, 0, 15, -15, 0, 15, -15, 0, 10, -10, 19, -15, -15, 19, -20, -15, 19, -15, -10, 19, -15, -10, 19, -20, -15, 19, -20, -10, 19, 10, -15, 19, -10, -15, 19, 10, -10, 19, 10, -10, 19, -10, -15, 19, -10, -10, 0, 10, -15, 0, -10, -10, 0, -10, -10, 0, 10, -15, 0, 10, -15, 0, -10, -10, 19, 20, -15, 19, 15, -15, 19, 20, -10, 19, 20, -10, 19, 15, -15, 19, 15, -10, 0, -10, -15, 0, -15, -10, 0, -15, -10, 0, -10, -15, 0, -10, -15, 0, -15, -10, 0, -15, -15, 0, -20, -10, 0, -20, -10, 0, -15, -15, 0, -15, -15, 0, -20, 10, 0, 15, -10, 0, 20, -10, 0, 15, 10, 0, 15, 10, 0, 20, -10, 0, 20, 10, 0, 10, -10, 0, 15, -10, 0, 10, 10, 0, 10, 10, 0, 15, -10, 0, 15, 10, 0, -10, -10, 0, 10, -10, 0, -10, 10, 0, -10, 10, 0, 10, -10, 0, 10, -10, 19, 15, -15, 19, 10, -15, 19, 15, -10, 19, 15, -10, 19, 10, -15, 19, 10, -15, 19, -15, -15, 19, -20, -20, 19, -15, 10, 0, -15, -10, 0, -10, -10, 0, -15, 10, 0, -15, 10, 0, -10, -10, 0, -10, -15, 19, 10, -20, 19, -10, -20, 19, 10, -15, 19, 10, -15, 19, -10, -20, 19, -10, 10, 0, -20, -10, 0, -15, -10, 0, -20, 10, 0, -20, 10, 0, -15, -10, 0, -15, -15, 19, -10, -20, 19, -15, -20, 19, -10, -15, 19, -10, -15, 19, -15, -20, 19, -15, -15, 19, 15, -20, 19, 10, -20, 19, 15, -15, 19, 15, -15, 19, 10, -20, 19, 10, -10, 19, -20, -15, 19, -25, -15, 19, -20, -10, 19, -20, -10, 19, -25, -15, 19, -25, -20, 0, 15, -25, 0, 10, -20, 0, 10, -15, 19, 20, -15, 19, 15, -20, 19, 15, 10, 19, -20, -10, 19, -15, 10, 19, -15, 10, 19, -20, -10, 19, -20, -10, 19, -15, -20, 0, 10, -25, 0, -10, -20, 0, -10, -20, 0, 10, -25, 0, 10, -25, 0, -10, -20, 0, -10, -25, 0, -10, -20, 0, -15, 10, 19, 20, -10, 19, 25, 10, 19, 25, 10, 19, 20, -10, 19, 20, -10, 19, 25, -20, 19, 15, -20, 19, 10, -25, 19, 10, -20, 19, 10, -25, 19, -10, -25, 19, 10, -20, 19, 10, -20, 19, -10, -25, 19, -10, -20, 19, -10, -20, 19, -15, -25, 19, -10, -5, 0, 25, -5, 10, 25, -10, 0, 25, -10, 0, 25, -5, 20, 25, -10, 20, 25, -10, 0, 25, -5, 10, 25, -5, 20, 25, -10, 0, 25, -10, 20, 20, -10, 0, 20, -10, 0, 25, -10, 20, 25, -10, 20, 20, -15, 0, -20, -15, 20, -25, -15, 0, -25, -15, 0, -20, -15, 20, -20, -15, 20, -25, -15, 20, 20, -25, 0, 10, -15, 0, 20, -15, 20, 20, -25, 20, 10, -25, 0, 10, -15, 20, -20, -25, 0, -10, -25, 20, -10, -15, 20, -20, -15, 0, -20, -25, 0, -10, 5, 0, 25, 10, 0, 25, 5, 10, 25, -25, 0, 10, -25, 20, -10, -25, 0, -10, -25, 0, 10, -25, 20, 10, -25, 20, -10, 5, 10, 25, -5, 20, 25, -5, 10, 25, 5, 10, 25, 5, 20, 25, -5, 20, 25 )

[sub_resource type="CubeMesh" id=5]

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]

[node name="deadend0" type="Spatial" groups=["PlacedRoom"]]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
script = ExtResource( 2 )

[node name="deadend0" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="deadend0" groups=["SetRoom"]]
collision_layer = 532
collision_mask = 532

[node name="CollisionShape" type="CollisionShape" parent="deadend0/StaticBody"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="deadend0/StaticBody" groups=["astar"]]
transform = Transform( 5, 0, 0, 0, 0.5, 0, 0, 0, 25, 0, 0, 0 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="Front" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 45 )

[node name="DFront" type="Area" parent="Front"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
collision_layer = 256
collision_mask = 256

[node name="CollisionShape" type="CollisionShape" parent="Front/DFront"]
shape = SubResource( 3 )
disabled = true

[node name="Front" type="Area" parent="Front"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )
collision_layer = 512
collision_mask = 512

[node name="CollisionShape" type="CollisionShape" parent="Front/Front"]
shape = SubResource( 4 )
disabled = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.1665, 0 )
aabb = AABB( -26.2981, -10.5793, -26.5145, 52.5962, 21.1587, 53.029 )

[connection signal="body_entered" from="Front/DFront" to="." method="_on_DFront_body_entered"]
[connection signal="body_entered" from="Front/Front" to="." method="_on_Front_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
